--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-openid-connect": "^2.8.0",
     "mysql": "^2.17.1",
     "sqlite3": "^5.0.0",
     "uuid": "^3.3.3",
