--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,16 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "@types/jest": "^29.0.3",
+    "@types/node": "^18.7.18",
+    "@types/react": "^18.0.20",
+    "@types/react-bootstrap": "^0.32.30",
+    "@types/react-dom": "^18.0.6",
     "express": "^4.17.1",
     "express-openid-connect": "^2.8.0",
     "mysql": "^2.17.1",
     "sqlite3": "^5.0.0",
+    "typescript": "^4.8.3",
     "uuid": "^3.3.3",
     "wait-port": "^0.2.2"
   },
