--- a/demeter-server/package.json
+++ b/demeter-server/package.json
@@ -9,26 +9,32 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "async_hooks": "^1.0.0",
     "bootstrap": "^5.2.1",
+    "browserify-zlib": "^0.2.0",
+    "crypto": "^1.0.1",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
     "net": "^1.0.2",
-    "process": "^0.11.10",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "timers": "^0.1.1",
+    "timers-browserify": "^2.0.12",
     "ts-node": "^10.9.1",
+    "ts-polyfill": "^3.8.2",
     "typescript": "^4.8.4",
     "typescript-cookie": "^1.0.4",
     "wait-port": "^1.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -54,7 +60,17 @@
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.8.2",
     "@types/react-bootstrap": "^0.32.30",
-    "tsconfig-paths": "^4.1.0",
-    "tslib": "^2.4.0"
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tls": "^0.0.1",
+    "url": "^0.11.0"
   }
 }
