--- a/demeter-server/tsconfig.json
+++ b/demeter-server/tsconfig.json
@@ -22,9 +22,14 @@
     "types": [
       "node"
     ],
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "*": [
+        "node_modules/*"
+      ]
+    }  
   },
   "include": [
-    "src"
-  ]
+    "src/**/*", 
+    "config-overrides.js"  ]
 }
