--- a/demeter-server/docker-compose.yml
+++ b/demeter-server/docker-compose.yml
@@ -4,13 +4,13 @@ services:
   # app service
   app:
     image: node:18-alpine
-    # command: sh -c "npm install && npm run build && npm run start"
-    command: sh -c "npm run start"
+    command: sh -c "npm install && npm run build && npm run start"
+    # command: sh -c "npm run start"
     ports:
       - 3000:3000
-    working_dir: /server
+    working_dir: /demeter-server
     volumes:
-      - ./:/server
+      - ./:/demeter-server
     environment:
       MYSQL_HOST: mysql
       MYSQL_USER: root
