--- a/demeter-api/package.json
+++ b/demeter-api/package.json
@@ -8,12 +8,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.18.1",
     "loader": "^2.1.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.24.0"
+    "sequelize": "^5.21.2"
   },
   "author": "Étienne Ménard",
   "keywords": [
