--- a/demeter-ui/package.json
+++ b/demeter-ui/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.64",
     "@types/react": "^18.0.21",
@@ -19,6 +20,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.1.0",
+    "bcrypt": "^5.1.0",
     "bootstrap": "^4.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
