--- a/demeter-ui/package.json
+++ b/demeter-ui/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.6.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
