--- a/.env
+++ b/.env
@@ -10,5 +10,9 @@ NODE_DOCKER_PORT=8080
 CLIENT_ORIGIN=http://127.0.0.1:8888
 CLIENT_API_BASE_URL=http://127.0.0.1:6868/api
 
+
+REMOTE_ORIGIN=https://demeterlvr.com
+REMOTE_API_BASE_URL=https://demeterlvr.com/api
+
 REACT_LOCAL_PORT=8888
 REACT_DOCKER_PORT=80
