--- a/demeter-ui/package.json
+++ b/demeter-ui/package.json
@@ -1,7 +1,8 @@
 {
   "name": "demeter-ui",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "description": "frontend",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
