--- a/demeter-ui/package.json
+++ b/demeter-ui/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.1.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.6.2",
+    "jspdf-invoice-template": "^1.4.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-confirm-alert": "^3.0.6",
