finally split news

--- a/.env
+++ b/.env
@@ -1,18 +1,22 @@
+# mysql database
 MYSQLDB_USER=root
 MYSQLDB_ROOT_PASSWORD=secret
 MYSQLDB_DATABASE=demeter_db
 MYSQLDB_LOCAL_PORT=3307
 MYSQLDB_DOCKER_PORT=3306
 
+# nodejs server
 NODE_LOCAL_PORT=6868
 NODE_DOCKER_PORT=8080
 
+# react client
+REACT_LOCAL_PORT=8888
+REACT_DOCKER_PORT=80
+
+# local development
 CLIENT_ORIGIN=http://127.0.0.1:8888
 CLIENT_API_BASE_URL=http://127.0.0.1:6868/api
 
-
+# server settings
 REMOTE_ORIGIN=https://demeterlvr.com
 REMOTE_API_BASE_URL=https://demeterlvr.com/api
-
-REACT_LOCAL_PORT=8888
-REACT_DOCKER_PORT=80
