security update & secret version display shhh

--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ MYSQLDB_DOCKER_PORT=3306
 # nodejs server
 NODE_LOCAL_PORT=6868
 NODE_DOCKER_PORT=8080
+DEV_PASSWORD=McypW7KhpbdC1A9lDH8g5equNOzUYuSi243dPZxtfLXwKZ9La2V.W
 
 # react client
 REACT_LOCAL_PORT=8888
